# Helicopter

./: CMakeLists.txt  Helicopter.qmlproject  LICENSE  README.md  qds.cmake
App/: CMakeLists.txt  main.cpp
App/autogen/: environment.h
Helicopter/: CMakeLists.txt  Constants.qml  qmldir
Helicopter/designer/: plugin.metainfo
HelicopterContent/: AltitudeFrame.qml  App.qml  CMakeLists.txt  CompassHeading.qml  GForce.qml  Screen01.ui.qml  SpeedFrame.qml
Python/: main.py
Python/autogen/: settings.py
